// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichResolutionCardRow renders with type=check 1`] = `
<SimpleCardRow
  content={
    <RichResolutionContent
      contentId="content-id"
      contentVariables={
        Object {
          "content-var-key": "content-var-value",
        }
      }
      deps={null}
      type="check"
    />
  }
  label="How to check"
  rowKey="rich-resolution-row-123"
/>
`;

exports[`RichResolutionCardRow renders with type=fix 1`] = `
<SimpleCardRow
  content={
    <RichResolutionContent
      contentId="content-id"
      contentVariables={
        Object {
          "content-var-key": "content-var-value",
        }
      }
      deps={null}
      type="fix"
    />
  }
  label="How to fix"
  rowKey="rich-resolution-row-123"
/>
`;
